compiler/testData/diagnostics/tests/typeParameters/typeParameterChainInReturnType.fir.kt
// ISSUE: KT-56212
fun <F> foo(): <!UNRESOLVED_REFERENCE!>F.X<!> = TODO()
